# ticket_bot

./: .gitignore  README.md  pyproject.toml  settings.json
webdriver/Maxbotplus_1.0.0/js/: ibon_eventbuy.js
