[project]
name = "ticket-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.8.3",
    "chardet>=5.2.0",
    "chromedriver-autoinstaller-max>=1.0.6",
    "cryptography>=46.0.1",
    "ddddocr>=1.5.6",
    "idna>=3.10",
    "looseversion>=1.3.0",
    "nodriver>=0.47.0",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "playsound==1.2.2",
    "pyperclip>=1.10.0",
    "selenium>=4.35.0",
    "tornado>=6.5.2",
    "undetected-chromedriver>=3.5.5",
    "urllib3>=2.5.0",
]
